# ei2-project-TheoAlthaus

./: MeteoSwiss.py  acquisition.py  cleaning.py  config.py  correlations.py  exploration.py  exploration_meteo.py  exploration_oiken.py  exploration_radiation_nuit.py  feature_basic_version.py  feature_v2  feature_v3.py  feature_v4.py  feature_v5.py  feature_v6.py  generate_calendar.py  golden_acquisition.py  golden_exploration_oiken.py  golden_feature_v6.py  golden_inference_v6.py  golden_normalisation_meteo_hist.py  golden_normalisation_meteo_pred.py  golden_normalisation_oiken.py  golden_training.py  golden_visu_inference.py  golden_visualisation_SW.py  normalisation_meteo_hist.py  normalisation_meteo_prev.py  normalisation_oiken.py  pyproject.toml  sensi_feature_v4.py  sensi_feature_v6.py  sensi_feature_v6b_ite10.py  test_tempo.py  training_WF_basic_version.py  training_WF_basic_version_Light_et_XGBoost.py  training_basic_version.py  training_v2_v3.py  training_v4.py  training_v5.py  (+8 more)
data_first_attempt/: calendar.parquet  features_day_ahead.parquet  oiken.parquet  oiken_clean.parquet
golden_data/: features_v6_golden.parquet  meteo_sion_hist_golden_clean.parquet  meteo_sion_hist_golden_raw.parquet  meteo_sion_pred_golden_clean.parquet  meteo_sion_pred_golden_raw.parquet  oiken_golden_clean.parquet  oiken_golden_raw.parquet  predictions_v6_golden.parquet  results_v6_golden.parquet  sw_hyperparams_lgb_golden.parquet  sw_predictions_lgb_golden.parquet  sw_results_lgb_golden.parquet  visualisation_sw_lgb_golden.html  visualisation_v6_golden.html
(+6 files in other folders)
